--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "typescript": "~3.9.3",
     "vue": "^2.6.11",
     "vue-cli-plugin-styleguidist": "^4.26.0",
+    "vue-styleguidist": "^4.54.1",
     "vue-template-compiler": "^2.6.11"
   },
   "publishConfig": {
